@@ -2,6 +2,9 @@
 
 	* ipmi-oem/: Support get-power-supply-status2 on Supermicro.
 
+	* libfreeipmi/util/ipmi-error-util.c (ipmi_completion_code_strerror_r):
+	Support Master read/write specific error codes.
+
 2015-08-18 Craig <agspoon@gmail.com>
 
 	* ipmi-sensors/ipmi-sensors-output-common.c (ipmi_sensors_get_thresholds):
